AB#324388:Fixed Title & CTA Overlapping

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/recipe-feature-module/recipe-feature-module.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/recipe-feature-module/recipe-feature-module.scss
@@ -190,6 +190,7 @@
 
       @include xs {
         padding: 0 1.2rem;
+        font-size: 4rem;
       }
 
       @include medium {
